...
    <string name="unsubscribe">Unsubscribe</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Could not change subscription</string>
    <string name="subscription_update_failed">Could not update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Playlists</string>
    <string name="tab_new">New Tab</string>
    <string name="tab_choose">Choose Tab</string>
    <string name="fragment_whats_new">What\'s New</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="controls_add_to_playlist_title">Add To</string>
...
    <string name="could_not_import_all_files">Warning: Could not import all files.</string>
    <string name="override_current_data">This will override your current setup.</string>
    <string name="import_settings">Do you want to also import settings?</string>
    <string name="error_unable_to_load_comments">Could not load comments</string>
    <!-- Kiosk Names -->
    <string name="kiosk">Kiosk</string>
    <string name="trending">Trending</string>
    <string name="top_50">Top 50</string>
    <string name="new_and_hot">New &amp; hot</string>
    <string name="conferences">Conferences</string>
    <string name="service_kiosk_string" translatable="false">%1$s/%2$s</string>
    <!-- Play Queue -->
    <string name="title_activity_background_player">Background player</string>
...
